[package]
name = "try_poem_openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "*"
poem-openapi = { version = "*", features = ["swagger-ui"] }
tokio = {version = "*", features = ["macros", "rt-multi-thread"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "time", "macros", "json" ] }
color-eyre = "*"
tracing = "*"
tracing-subscriber = "*"
lazy_static = "*"
serde = {version = "*", features = ["derive"]}
serde_json = "*"
url-escape = "*"